2011-01-20  Dawit Alemayehu  <adawit@kde.org>

Reviewed by Andreas Kling.

        [Qt] Fix Layering violation in MediaPlayerPrivateQt.
        https://bugs.webkit.org/show_bug.cgi?id=52733

        No new tests. no behavioral change.

       * platform/graphics/qt/MediaPlayerPrivateQt.cpp:
        (WebCore::MediaPlayerPrivateQt::commitLoad):

Canonical link: https://commits.webkit.org/66503@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@76265 268f45cc-cd09-0410-ab3c-d52691b4dbfc